# clappen

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  deny.toml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml
clappen/: Cargo.toml  test.rs
clappen/src/: lib.rs
clappen/src/clappen/: attrs.rs
clappen/src/clappen_command/: attrs.rs  mod.rs
clappen/src/clappen_impl/: mod.rs
clappen/src/clappen_struct/: mod.rs
cli/: Cargo.toml
cli/examples/: clappen_full_wrapper.rs
cli/tests/: ui.rs
cli/tests/expand/default/: flatten_without_prefix.pass.rs  nested_1_level.pass.rs  nested_2_level.pass.rs  struct_only.pass.expanded.rs  use_items.pass.expanded.rs
cli/tests/expand/invalid_usage/: clappen_command_without_apply.fail.stderr  flatten_command_without_clappen.fail.rs  flatten_command_without_clappen.fail.stderr  invalid_enum.fail.stderr  unknown_field.fail.expanded.rs  unknown_field.fail.stderr
cli/tests/expand/paste/: paste.expanded.rs
cli/tests/ui/: clappen_nested_2_level.toml  clappen_thin_wrapper.toml
examples/: clappen_full_wrapper.rs  clappen_full_wrapper_default_prefix.rs  clappen_nested_2_level.rs  clappen_thin_wrapper.rs  paste.rs
src/: lib.rs
src/clappen/: mod.rs
src/clappen_command/: attrs.rs
src/clappen_impl/: attrs.rs  item_impl.rs
src/clappen_struct/: attrs.rs  item_struct.rs
src/helper/: mod.rs
tests/: expandtest.rs  full.rs  full_default_prefix.rs  struct_only.rs
tests/expand/default/: basic.pass.expanded.rs  basic.pass.rs  flatten_without_prefix.pass.expanded.rs  nested_1_level.pass.expanded.rs  nested_1_level.pass.rs  nested_2_level.pass.expanded.rs  nested_2_level.pass.rs  struct_only.pass.rs  use_items.pass.rs
tests/expand/invalid_usage/: clappen_command_without_apply.fail.expanded.rs  clappen_command_without_apply.fail.rs  flatten_command_without_clappen.fail.expanded.rs  invalid_enum.fail.rs  multiple_struct.fail.expanded.rs  multiple_struct.fail.rs  multiple_struct.fail.stderr  unknown_field.fail.rs
tests/expand/paste/: paste.rs
tests/ui/: clappen_full_wrapper.toml  clappen_full_wrapper_default_prefix.toml  paste.toml
