[package]
name = "clappen"

[package.version]
workspace = true

[package.edition]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true, default-features = false }
quote = { workspace = true, default-features = false }
syn = { workspace = true, features = [
  "clone-impls", # for clone() debug only, ideally should be not used
  "full",
  "parsing",
  "printing",
  "proc-macro",
], default-features = false }

[dev-dependencies]
clap = { workspace = true, default-features = true, features = [
  "derive",
  "env",
  "std",
] }

[features]
default = []
