[package]
name = "cli"

[package.version]
workspace = true

[package.edition]
workspace = true

[build-dependencies]

[dependencies]
clappen = { path = "../clappen" }

[dev-dependencies]
clap = { workspace = true, default-features = true, features = [
  "derive",
  "env",
  "std",
] }
macrotest = { workspace = true }
paste = { workspace = true }
trybuild = { workspace = true, features = ["diff"] }
trycmd = { workspace = true, default-features = false, features = [
  "color-auto",
  "diff",
  "examples",
] }
